SUBDIRS = src data

MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub \
                       configure depcomp install-sh  \
                       Makefile.in missing ltmain.sh \
                       mkinstalldirs config.h.in config.h.in~ INSTALL

maintainer-clean-local:
	$(RM) -R m4
